# Synchro

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Synchro.pro  azure-pipelines.yml
.github/workflows/: main.yml
cmake/: meta.cmake
resources/: README.md  pause-play.mng  play-pause.mng  playpause.shapeshifter  resources.qrc
src/: clientlistmodel.cpp  clientlistmodel.h  confhandler.cpp  confhandler.h  corerenderer.cpp  corerenderer.h  iso639.h  main.cpp  main.qml  qml.qrc  seekworker.cpp  seekworker.h  serverbrowser.cpp  serverbrowser.h  serverlistmodel.cpp  serverlistmodel.h  synchronycontroller.cpp  synchronycontroller.h  trackhandler.cpp  trackhandler.h  videoobject.cpp  videoobject.h
src/qml/: main.qml  qml.qrc  qtquickcontrols2.conf
src/qml/synchrocomponents/: OnScreenController.qml  PreferencesPanel.qml  Seekbar.qml  SynchroBackground.qml  SynchronyPanel.qml  VolumeOsc.qml
src/qml/synchrostyle/: Menu.qml  MenuSeparator.qml  Slider.qml  Style.qml  qmldir
src/qml/synchroutil/: Shortcuts.qml
src/synchrocomponents/: OnScreenController.qml  Seekbar.qml  SynchroBackground.qml  SynchronyPanel.qml  VolumeOsc.qml
src/synchroqml/: OnScreenController.qml  Seekbar.qml
src/synchrostyle/: Menu.qml  MenuItem.qml  MenuSeparator.qml  Slider.qml  Style.qml
